--- a/Calendar.html
+++ b/Calendar.html
@@ -9,6 +9,7 @@
     <div id="controls">
         <select id="monthSelect" onchange="updateCalendar()"></select>
         <select id="yearSelect" onchange="updateCalendar()"></select>
+        <button onclick="resetSelection()">Reset</button>
     </div>
     <div id="calendar"></div>
     <script src="calendar.js"></script>
