--- a/Calendar.html
+++ b/Calendar.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div id="controls">
-        <select id="monthSelect" onchange="updateCalendar()"></select>
-        <select id="yearSelect" onchange="updateCalendar()"></select>
+        <select id="monthSelect"></select>
+        <select id="yearSelect"></select>
         <button onclick="resetSelection()">Reset</button>
     </div>
     <div id="calendar"></div>
