--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
             text-align: center;
             border: 1px solid #ccc;
             cursor: pointer;
+            padding: 10px;
+            box-sizing: border-box;
         }
         .header {
             font-weight: bold;
@@ -24,6 +26,7 @@
 <body>
     <select id="monthSelect"></select>
     <select id="yearSelect"></select>
+    <select id="timeZoneSelect"></select>
     <div id="calendar"></div>
     <script src="calendar.js"></script>
 </body>
